test/mutation_analysis/s0032_longest_valid_parentheses/hafis/ablation_o3_r50/mutants/2/result.txt
./test/mutation_analysis/s0032_longest_valid_parentheses/hafis/ablation_o3_r50/mutants/2/Solution.java:20: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
